[gd_scene load_steps=13 format=3 uid="uid://bt02n2pltoch5"]

[ext_resource type="PackedScene" uid="uid://dbln36dnvapxe" path="res://src/scenes/elevator_button.tscn" id="1_0nmn3"]
[ext_resource type="Script" uid="uid://cbhq2xwd2iqqw" path="res://src/scripts/elevator.gd" id="1_b2x45"]

[sub_resource type="BoxShape3D" id="BoxShape3D_yrkqt"]

[sub_resource type="BoxMesh" id="BoxMesh_yrkqt"]

[sub_resource type="BoxMesh" id="BoxMesh_0nmn3"]

[sub_resource type="BoxShape3D" id="BoxShape3D_b2x45"]

[sub_resource type="BoxMesh" id="BoxMesh_b2x45"]

[sub_resource type="BoxShape3D" id="BoxShape3D_6ycfg"]

[sub_resource type="Animation" id="Animation_b2x45"]
resource_name = "close_doors"
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ElevatorMesh/door")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, -0.954964, 9.82658, 0.479165, 1, 1, 0, 9.827, 0.479)

[sub_resource type="Animation" id="Animation_6ycfg"]
length = 0.001
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ElevatorMesh/door")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, -0.954964, 9.82658, 0.479165)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6ycfg"]
_data = {
&"RESET": SubResource("Animation_6ycfg"),
&"close_doors": SubResource("Animation_b2x45")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_0nmn3"]
size = Vector3(1, 14.4823, 0.999268)

[node name="Elevator" type="Node3D"]
script = ExtResource("1_b2x45")

[node name="ElevatorPlatform" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ElevatorPlatform"]
transform = Transform3D(2, 0, 0, 0, 0.1, 0, 0, 0, 3, 0, 0, 0)
shape = SubResource("BoxShape3D_yrkqt")

[node name="FloorDisplay" type="RichTextLabel" parent="ElevatorPlatform"]
offset_right = 40.0
offset_bottom = 23.0
text = "PB"

[node name="ElevatorMesh" type="MeshInstance3D" parent="ElevatorPlatform"]
transform = Transform3D(2, 0, 0, 0, 0.1, 0, 0, 0, 3, 0, 0, 0)
mesh = SubResource("BoxMesh_yrkqt")
skeleton = NodePath("../..")

[node name="elevator_panel" type="MeshInstance3D" parent="ElevatorPlatform/ElevatorMesh"]
transform = Transform3D(0.098502, 0, 0, 0, 15.2219, 0, 0, 0, 0.198349, 0.387449, 8.07701, 0.250229)
mesh = SubResource("BoxMesh_0nmn3")

[node name="StaticBody3D" type="StaticBody3D" parent="ElevatorPlatform/ElevatorMesh/elevator_panel"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ElevatorPlatform/ElevatorMesh/elevator_panel/StaticBody3D"]
shape = SubResource("BoxShape3D_b2x45")

[node name="ElevatorButton" parent="ElevatorPlatform/ElevatorMesh/elevator_panel" instance=ExtResource("1_0nmn3")]
transform = Transform3D(-0.219201, 0, -3.38087, 0, 0.656949, 0, 2.51846, 0, -0.0725716, -0.650024, 0.288249, -0.178858)
elevator_path = NodePath("../../../..")

[node name="ElevatorButton2" parent="ElevatorPlatform/ElevatorMesh/elevator_panel" instance=ExtResource("1_0nmn3")]
transform = Transform3D(-0.219201, 0, -3.38087, 0, 0.656949, 0, 2.51846, 0, -0.0725716, -0.650024, 0.29349, 0.158543)
floor_number = 1
elevator_path = NodePath("../../../..")

[node name="ElevatorButton3" parent="ElevatorPlatform/ElevatorMesh/elevator_panel" instance=ExtResource("1_0nmn3")]
transform = Transform3D(-0.219201, 0, -3.38087, 0, 0.656949, 0, 2.51846, 0, -0.0725716, -0.650024, 0.40491, -0.171822)
floor_number = 2
elevator_path = NodePath("../../../..")

[node name="ElevatorButton4" parent="ElevatorPlatform/ElevatorMesh/elevator_panel" instance=ExtResource("1_0nmn3")]
transform = Transform3D(-0.219201, 0, -3.38087, 0, 0.656949, 0, 2.51846, 0, -0.0725716, -0.650024, 0.406519, 0.160556)
floor_number = 3
elevator_path = NodePath("../../../..")

[node name="door" type="MeshInstance3D" parent="ElevatorPlatform/ElevatorMesh"]
transform = Transform3D(1, 0, 0, 0, 18.9528, 0, 0, 0, 0.0371017, -0.954964, 9.82658, 0.479165)
mesh = SubResource("BoxMesh_b2x45")

[node name="StaticBody3D" type="StaticBody3D" parent="ElevatorPlatform/ElevatorMesh/door"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ElevatorPlatform/ElevatorMesh/door/StaticBody3D"]
shape = SubResource("BoxShape3D_6ycfg")

[node name="DoorAnimationPlayer" type="AnimationPlayer" parent="ElevatorPlatform"]
libraries = {
&"": SubResource("AnimationLibrary_6ycfg")
}

[node name="ElevatorArea" type="Area3D" parent="ElevatorPlatform"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ElevatorPlatform/ElevatorArea"]
transform = Transform3D(2, 0, 0, 0, 0.1, 0, 0, 0, 3, 0, 0.773869, -0.000366211)
shape = SubResource("BoxShape3D_0nmn3")
